--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,10 +14,11 @@ jobs:
         with:
           python-version: 3.x
       - run: |
-          pip install pytest
+          pip install pytest pytest-cov
           pip install -r requirements.txt
       - run: |
-          pytest
+          pytest --cov --cov-report=xml
+      - uses: codecov/codecov-action@v2
 
   lint:
     runs-on: ubuntu-latest
